<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <TextView
        android:id="@+id/numer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/text_id"
        android:textSize="14sp"
        android:padding="5dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/czas"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:text="@string/text_time"
        android:textSize="14sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxLines="2"
        android:padding="5dp"
        android:text="@string/text_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/czas"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tytul"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/czas"
        android:textSize="12sp"
        android:maxLines="3"
        android:padding="5dp"
        android:text="@string/text_subtitle"/>

</RelativeLayout>
